GUI-1776: Hide inbound/outbound security group rules tabs via ng-cloak; fix alignment of ip/group fields in rules editor

--- a/eucaconsole/static/css/widgets/securitygroup_rules.css
+++ b/eucaconsole/static/css/widgets/securitygroup_rules.css
@@ -5,7 +5,7 @@
 ----------------------------------------- */
 form input.port { width: 3.8rem; }
 form .row.trafficfrom { margin-top: 1rem; }
-form .ip-label, form .sg-label { margin-right: 1rem; }
+form .ip-label { margin-right: 26px; }
 form .ipaddress, form .securitygroupname { text-align: left !important; }
 form .cidr-block { display: inline-block; vertical-align: top; margin-bottom: 0.5rem; }
 form .cidr-block .link { margin-bottom: 0.5rem; }
